--- a/index.html
+++ b/index.html
@@ -307,9 +307,9 @@
                   <div class="lead-form__row lead-form__row_gdpr">
                     <div class="lead-form__data-item lead-form__data-item_gdpr">
                       <div class="lead-form__gdpr">
-                        <label for="gdpr-1" class="gdpr-label checked">
+                        <label for="gdpr-2" class="gdpr-label checked">
                           <input
-                            id="gdpr-1"
+                            id="gdpr-2"
                             validaterule="checkbox"
                             type="checkbox"
                             name="gdpr"
@@ -317,8 +317,18 @@
                             checked=""
                           />
                           <span class="gdpr-text"
-                            >أوافق على سياسة الخصوصية، الشروط والأحكام وعلى تلقي
-                            المواد التسويقية</span
+                            >أوافق على
+                            <a
+                              href="https://www.arlbrgmediaonline.com/privacy-policy/"
+                              target="_blank"
+                              >‎سياسة الخصوصية‏</a
+                            >،
+                            <a
+                              href="https://www.arlbrgmediaonline.com/terms-and-conditions/"
+                              target="_blank"
+                              >‎الشروط والأحكام‏</a
+                            >
+                            وعلى تلقي المواد التسويقية</span
                           >
                         </label>
                         <div class="lead-form__tooltip lead-form__tooltip-gdpr">
@@ -561,6 +571,40 @@
                     ابدأ الآن
                   </button>
                 </div>
+                <!-- <div class="lead-form__row lead-form__row_gdpr">
+                  <div class="lead-form__data-item lead-form__data-item_gdpr">
+                    <div class="lead-form__gdpr">
+                      <label for="gdpr-1" class="gdpr-label checked">
+                        <input
+                          id="gdpr-1"
+                          validaterule="checkbox"
+                          type="checkbox"
+                          name="gdpr"
+                          class="lead-form__gdpr-checkbox required-field"
+                          checked=""
+                        />
+                        <span class="gdpr-text"
+                          >أوافق على
+                          <a
+                            href="https://www.arlbrgmediaonline.com/privacy-policy/"
+                            target="_blank"
+                            >‎سياسة الخصوصية‏</a
+                          >،
+                          <a
+                            href="https://www.arlbrgmediaonline.com/terms-and-conditions/"
+                            target="_blank"
+                            >‎الشروط والأحكام‏</a
+                          >
+                          وعلى تلقي المواد التسويقية</span
+                        >
+                      </label>
+                      <div class="lead-form__tooltip lead-form__tooltip-gdpr">
+                        للمتابعة، يجب الموافقة على سياساتنا
+                      </div>
+                    </div>
+                  </div>
+                </div> -->
+
                 <div class="lead-form__row lead-form__row_gdpr">
                   <div class="lead-form__data-item lead-form__data-item_gdpr">
                     <div class="lead-form__gdpr">
@@ -574,8 +618,18 @@
                           checked=""
                         />
                         <span class="gdpr-text"
-                          >أوافق على سياسة الخصوصية، الشروط والأحكام وعلى تلقي
-                          المواد التسويقية</span
+                          >أوافق على
+                          <a
+                            href="https://www.arlbrgmediaonline.com/privacy-policy/"
+                            target="_blank"
+                            >‎سياسة الخصوصية‏</a
+                          >،
+                          <a
+                            href="https://www.arlbrgmediaonline.com/terms-and-conditions/"
+                            target="_blank"
+                            >‎الشروط والأحكام‏</a
+                          >
+                          وعلى تلقي المواد التسويقية</span
                         >
                       </label>
                       <div class="lead-form__tooltip lead-form__tooltip-gdpr">
